--- a/css/estilos.copia.css
+++ b/css/estilos.copia.css
@@ -1,140 +1,218 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300,400,500,600,700,900&family=Ubuntu:wght@300;400&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300,400,500,600,700,900&family=Ubuntu:wght@300;400&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-
+  margin: 0;
+  padding: 0;
 }
 
-*{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
+* {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 h1 {
-
-    color: #000000;
-    font-size: 50px;
-    
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: #000000;
+  font-size: 50px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-
-
 
 h2 {
-    color: black;
-    font-size: 30px;
-    
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+  color: black;
+  font-size: 30px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-
 body {
-    background-image: url(https://static.vecteezy.com/system/resources/previews/006/431/804/original/seamless-dog-pattern-with-paw-prints-bones-hearts-and-balls-cat-foot-texture-pattern-with-doggy-pawprint-and-bones-dog-texture-hand-drawn-illustration-in-doodle-style-on-white-background-vector.jpg);
+  background-image: url(https://static8.depositphotos.com/1535772/1004/v/950/depositphotos_10046850-stock-illustration-background-with-dog-paw-print.jpg);
 }
 
 nav {
-    background-color: aliceblue;
-    height: 40px;
-    border-bottom: solid black;
+  background-color: rgb(240, 180, 112);
+  height: 40px;
+  border-bottom: solid black;
 }
-
+ .tituloDonaciones{
+  color: #ddd;
+}
 
 
 .footer {
-    background-color: beige;
-    color: black;
-    text-align: center;
-    height: 30px;
-    line-height: 30px;
+  background-color: rgb(247, 235, 235);
+  color: black;
+  text-align: center;
+  height: 30px;
+  line-height: 30px;
+}
+
+.youtube {
+  background-image: url(https://th.bing.com/th/id/OIP.F-iuLAkhA8EdMm0b4HIFpAHaEW?rs=1&pid=ImgDetMain);
+}
+
+.containerCard {
+  background: linear-gradient(0deg, rgba(195,101,34,1) 28%, rgba(201,145,22,1) 54%);
+}
+
+h3 {
+  color: #9b7a50;
 }
 
 
 
-.youtube{
-    background-image: url(https://th.bing.com/th/id/OIP.F-iuLAkhA8EdMm0b4HIFpAHaEW?rs=1&pid=ImgDetMain);
+.text {
+  color: #1a1916;
+  text-align: center;
 }
 
-.containerCard{
-    background-image: linear-gradient(to left bottom, #a15994, #d56785, #f3856e, #f6af5d, #e1dc68);
-   }
+.folded-corner:hover .text {
+  visibility: visible;
+  color: #000000;
+}
 
-   
-   h3 {
-     color: #f0b2e0;
-   }
-   .text{
-       color: #1a1916;
-       text-align: center;
-   }
-   
-   
-   .folded-corner:hover .text{
-       visibility: visible;
-       color: #000000;;
-   }
-   .Services-tab{
-       margin-top:80px;
-   }
-   
-   
-   .folded-corner{
-     padding: 60px 30px;
-     position: relative;
-     font-size: 100%;
-     text-decoration: none;
-     color: #999; 
-     background: transparent;
-     transition: all ease .5s;
-     border: 1px solid #6d6d6d;
-   }
-   .folded-corner:hover{
-       background-color: #f58ed6;
-   }
-   
-   
-   
-   .folded-corner:before {
-     content: "";
-     position: absolute;
-     top: 0;
-     right: 0;
-     border-style: solid;
-     border-width: 0 0px 0px 0;
-     border-color: #ddd #000;
-     transition: all ease .3s;
-   }
-   
-   
-   .folded-corner:hover:before {
-       background-color: #ff8be6;
-     border-width: 0 50px 50px 0;
-     border-color: #eee #000;
-     
-   }
-   
-   
-   .service_tab_1:hover .fa-icon-image{
-       color: #000;
-       transform:  scale(1.5);
-   }
-   
-   
-   .fa-icon-image{ 
-       color: #f5eb94; 
-       display: inline-block; 
-       font-style: normal;
-       font-variant: normal;
-       font-weight: normal;
-       line-height: 1;
-       font-size-adjust: none;
-       font-stretch: normal;
-       -moz-font-feature-settings: normal;
-       -moz-font-language-override: normal;
-       text-rendering: auto;
-       transition: all .65s linear 0s;
-       text-align: center;
-       transition: all 1s cubic-bezier(.99,.82,.11,1.41);
-   }
-   
+.Services-tab {
+  margin-top: 80px;
+}
+
+.folded-corner {
+  padding: 60px 30px;
+  position: relative;
+  font-size: 100%;
+  text-decoration: none;
+  color: #999;
+  background: transparent;
+  transition: all ease 0.5s;
+  border: 1px solid #6d6d6d;
+}
+
+.folded-corner:hover {
+  background-color: #f5c88e;
+}
+
+.folded-corner:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-style: solid;
+  border-width: 0 0px 0px 0;
+  border-color: #ddd #000;
+  transition: all ease 0.3s;
+}
+
+.folded-corner:hover:before {
+  background-color: #f1ba71;
+  border-width: 0 50px 50px 0;
+  border-color: #eee #000;
+}
+
+.service_tab_1:hover .fa-icon-image {
+  color: #000;
+  transform: scale(1.5);
+}
+
+.fa-icon-image {
+  color: #f5eb94;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  line-height: 1;
+  font-size-adjust: none;
+  font-stretch: normal;
+  text-rendering: auto;
+  transition: all 0.65s linear 0s;
+  text-align: center;
+  transition: all 1s cubic-bezier(0.99, 0.82, 0.11, 1.41);
+}
+
+.cardtext {
+  color: #fdf4ec;
+  text-align: end;
+}
+
+p{
+  font-weight: bold;
+}
+.btn3{
+  text-align: center;
+}
+.btn3 button{
+  width: 150px;
+  height: 30px;
+  background-color: burlywood;
+  border: 3px solid black; border-radius: 10%;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+.btn3 button:hover{
+  background-color: rgb(252, 149, 31);
+}
+@media screen and (max-width:895px){
+  .btn3 button{
+      width: 100px;
+  }
+}
+
+.card{
+  background-color: rgb(241, 215, 180);
+  border-radius: 10%;
+}
+
+.header-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: #e0d18e;
+}
+
+.banner-image {
+  order: 2;
+  z-index: 5;
+}
+.banner-image img {
+  clip-path: polygon(30% 0, 100% 0%, 100% 100%, 30% 100%, 5% 50%);
+}
+
+@media only screen and (max-width: 768px) {
+  .banner-image img {
+    clip-path: none;
+  }
+}
+
+.banner-arrow {
+  background-color: #dfa271;
+  display: flex;
+}
+
+.banner-arrow-text {
+  position: absolute;
+  right: 15%;
+  z-index: 10;
+  bottom: 20rem;
+  left: 11% !important;
+  padding-bottom: 30px;
+}
+
+@media only screen and (max-width: 768px) {
+  .banner-image {
+    order: 1;
+  }
+  .banner-arrow {
+    order: 2;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .banner-arrow-text {
+    bottom: 1rem;
+  }
+}
+
+.btn2 button{
+  width: 100px;
+  height: 30px;
+  background: transparent;
+  border: 1px solid black;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+
+
+
