--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    $background-color: beige;
+    background-color: rgb(240, 195, 137);
     color: black;
     text-align: center;
     height: 30px;
@@ -7,5 +7,5 @@
 }
 
 .youtube {
-    $background-image: url(https://th.bing.com/th/id/OIP.F-iuLAkhA8EdMm0b4HIFpAHaEW?rs=1&pid=ImgDetMain);
+    background-image: url(https://th.bing.com/th/id/OIP.F-iuLAkhA8EdMm0b4HIFpAHaEW?rs=1&pid=ImgDetMain);
 }
