--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -116,7 +116,7 @@ h3 {
   transition: all 0.65s linear 0s;
   text-align: center;
   transition: all 1s cubic-bezier(0.99, 0.82, 0.11, 1.41);
-
+}
 
 
 
