--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,7 +36,7 @@ nav {
 
 
 .footer {
-  background-color: rgb(247, 235, 235);
+  background-color: rgb(240, 194, 142);
   color: black;
   text-align: center;
   height: 30px;
@@ -44,7 +44,7 @@ nav {
 }
 
 .youtube {
-  background-image: url(https://th.bing.com/th/id/OIP.F-iuLAkhA8EdMm0b4HIFpAHaEW?rs=1&pid=ImgDetMain);
+  background-image: url(https://media.istockphoto.com/id/509624240/vector/dog-wallpaper-3.jpg?s=612x612&w=0&k=20&c=ofzmdAYKqaijfa3e9QRLTdaK8E4OdG-yLl1wbX9SeOU=);
 }
 
 .containerCard {
@@ -159,7 +159,7 @@ p{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: #e0d18e;
+  background-color: #e0d072;
 }
 
 .banner-image {
@@ -186,7 +186,7 @@ p{
   right: 15%;
   z-index: 10;
   bottom: 20rem;
-  left: 11% !important;
+  left: 11%;
   padding-bottom: 30px;
 }
 
@@ -201,7 +201,7 @@ p{
 
 @media only screen and (max-width: 768px) {
   .banner-arrow-text {
-    bottom: 1rem;
+    bottom: 4rem;
   }
 }
 
@@ -217,6 +217,18 @@ p{
   background-color: rgb(224, 163, 93);
 }
 
+.tpc{
+  box-shadow: 0 0 5px black;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+.tpc:hover{
+  background-color: #f5c88e;
+  transform: translateY(-10px);
+}
+.card-content{
+  background-color: #dfa271;
+}
 
 
 /*# sourceMappingURL=estilos.css.map */
