--- a/sass/_tarjetas.scss
+++ b/sass/_tarjetas.scss
@@ -62,7 +62,7 @@
 
 
 .fa-icon-image {
-    $color: #f5eb94;
+    color: #f5eb94;
     display: inline-block;
     font-style: normal;
     font-variant: normal;
@@ -76,11 +76,28 @@
     transition: all 1s cubic-bezier(.99, .82, .11, 1.41);
 }
 .cardtext {
-    $color: #fdf4ec;
+    color: #f0f0f0;
     text-align: end;
   }
 
   .card{
-    $background-color: rgb(241, 215, 180);
+    background-color: rgb(241, 215, 180);
     border-radius: 10%;
   }
+
+.tpc{
+    box-shadow: 0 0 5px black;
+    transition: 0.5s ease;
+    cursor: pointer;
+}
+.tpc:hover{
+    transform: translateY(-10px);
+}
+
+.container{
+    margin-top: 50px;
+}
+.container2{
+    margin-top: 100px;
+
+}
